[package]
name = "avian_2d_editor_prototypes"
version = "0.1.0"
edition = "2024"

[lib]
name = "avian_editor"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.16", features = ["default_font", "png", "jpeg", "bmp", "tga", "webp"] }
avian2d = { git = "https://github.com/Jondolf/avian", rev = "3b711520c90541b84bce570241baafb54245e33a" }
bevy_picking = "0.16"

bevy_egui = { version = "0.36", features = ["bevy_ui","immutable_ctx"] }
bevy-inspector-egui = "0.33"
re_ui = { version = "0.24", default-features = false }
ron = "0.11"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rfd = "0.15"
tokio = { version = "1.0", features = ["full"] }
bevy_state = "0.16"
thiserror = "2.0"
tempfile = "3.0"
once_cell = "1.0"
log = "0.4"
disqualified = "1.0"
font-kit = "0.14"
chrono = { version = "0.4", features = ["serde"] }
futures-lite = "2.0"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }

[[bin]]
name = "editor"
path = "src/bin/editor.rs"
