[package]
name = "avian_2d_editor_prototypes"
version = "0.1.0"
edition = "2024"

[lib]
name = "avian_editor"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.16", features = ["default_font", "png", "jpeg", "bmp", "tga", "webp"] }
avian2d = { path = "avian/crates/avian2d" }
bevy_egui = { version = "0.36", features = ["bevy_ui","immutable_ctx"] }
bevy-inspector-egui = "0.33"
re_ui = { version = "0.24", default-features = false }
ron = "0.11"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
rfd = "0.15"
thiserror = "2.0"
once_cell = "1.0"
log = "0.4"
disqualified = "1.0"
font-kit = "0.14"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[[bin]]
name = "editor"
path = "src/bin/editor.rs"
